Release ...
* tbl: The ".warn" troff request is now used internally to save, disable,
  and restore warning messages around those portions of tbl output which
  use potentially undefined requests or registers.
* pic: The comments before ".PS" containing bounding box information are
  now prefixed by '.\"' instead of '...' for compatibility with ".warn".
* pic/dpost: The PostScript implementation of the "Dl" (draw line)
  operation now rounds the current point to the troff device resolution
  when testing for equality. This is another fix for "box fill 0" in pic.
* [nt]roff: The "\n[.warn]" number register is now properly changed after
  a call to ".warn" with no arguments.

Release 060208
* troff: Eastern European characters for Unicode/PostScript conversion
  have been added (patch by Vladimir B. Machulsky).
* troff, dpost: Font file names can now contain spaces or bytes outside
  the ASCII range. A "%xx" escape sequence, where "xx" are hexadecimal
  digits, has been introduced in order to achieve this. The description
  of ".fp" in the "NEWS" file contains details on this.
* [nt]roff: The ".vpt" request has been added to make it possible to
  disable vertical position traps.
* dpost: With the ".track" command, the tracking amount was not properly
  initialized at every page of PostScript output. This could result in
  incorrect arrangements of characters.
* [nt]roff: Diagnostic messages now include the number of the current
  output page.
* [nt]roff: Page breaks inside a diversion are now properly ignored.
* dpost: When a font was mounted replacing another font on the same
  physical position, non-ASCII characters were not printed correctly
  afterwards (bug reported by Vladimir B. Machulsky).
* dpost: The BookMark device command now causes "/XYZ" destination keys
  to be written to PDF documents. This has the effect that the current
  zoom factor is retained when a bookmark is selected.
* pic, grap: Fixed 8-bit input in label texts (bug reported by Vladimir